// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extract-exports button-default-class.js 1`] = `
Object {
  "default": Object {
    "internalName": "Button",
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 7,
      },
      "start": Object {
        "column": 0,
        "line": 3,
      },
    },
    "name": "default",
  },
  "named": Object {},
}
`;

exports[`extract-exports button-default-class-export.js 1`] = `
Object {
  "default": Object {
    "internalName": "Button",
    "loc": Object {
      "end": Object {
        "column": 1,
        "line": 7,
      },
      "start": Object {
        "column": 37,
        "line": 3,
      },
    },
    "name": "default",
  },
  "named": Object {},
}
`;

exports[`extract-exports button-named-class.js 1`] = `
Object {
  "default": undefined,
  "named": Object {
    "Button": Object {
      "internalName": "Button",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 7,
        },
        "start": Object {
          "column": 44,
          "line": 3,
        },
      },
      "name": "Button",
    },
  },
}
`;

exports[`extract-exports button-named-class-export.js 1`] = `
Object {
  "default": undefined,
  "named": Object {
    "Button": Object {
      "internalName": "Button",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 7,
        },
        "start": Object {
          "column": 37,
          "line": 3,
        },
      },
      "name": "Button",
    },
  },
}
`;

exports[`extract-exports cjs-named-export.js 1`] = `
Object {
  "default": undefined,
  "named": Object {
    "Button": Object {
      "internalName": "Button",
      "loc": Object {
        "end": Object {
          "column": 23,
          "line": 1,
        },
        "start": Object {
          "column": 15,
          "line": 1,
        },
      },
      "name": "Button",
    },
  },
}
`;

exports[`extract-exports export-all-from.js 1`] = `
Object {
  "default": undefined,
  "named": Object {
    "stories.tsx": Object {
      "from": "stories.tsx",
      "internalName": "*",
      "loc": Object {
        "end": Object {
          "column": 27,
          "line": 1,
        },
        "start": Object {
          "column": 14,
          "line": 1,
        },
      },
      "name": "*",
    },
  },
}
`;

exports[`extract-exports export-from.js 1`] = `
Object {
  "default": undefined,
  "named": Object {
    "myStory": Object {
      "from": "stories.tsx",
      "internalName": "myStory",
      "loc": Object {
        "end": Object {
          "column": 16,
          "line": 1,
        },
        "start": Object {
          "column": 9,
          "line": 1,
        },
      },
      "name": "myStory",
    },
  },
}
`;

exports[`extract-exports export-from-alias.js 1`] = `
Object {
  "default": undefined,
  "named": Object {
    "newStory": Object {
      "from": "stories.tsx",
      "internalName": "myStory",
      "loc": Object {
        "end": Object {
          "column": 28,
          "line": 1,
        },
        "start": Object {
          "column": 20,
          "line": 1,
        },
      },
      "name": "newStory",
    },
  },
}
`;

exports[`extract-exports named-const-export.js 1`] = `
Object {
  "default": undefined,
  "named": Object {
    "myStory": Object {
      "internalName": "myStory",
      "loc": Object {
        "end": Object {
          "column": 24,
          "line": 1,
        },
        "start": Object {
          "column": 16,
          "line": 1,
        },
      },
      "name": "myStory",
    },
  },
}
`;

exports[`extract-exports named-export.js 1`] = `
Object {
  "default": Object {
    "internalName": "default",
    "loc": Object {
      "end": Object {
        "column": 28,
        "line": 2,
      },
      "start": Object {
        "column": 0,
        "line": 2,
      },
    },
    "name": "default",
  },
  "named": Object {
    "namedExport": Object {
      "internalName": "namedExport",
      "loc": Object {
        "end": Object {
          "column": 40,
          "line": 1,
        },
        "start": Object {
          "column": 27,
          "line": 1,
        },
      },
      "name": "namedExport",
    },
  },
}
`;

exports[`extract-exports named-export-alias.js 1`] = `
Object {
  "default": undefined,
  "named": Object {
    "exportedStory": Object {
      "internalName": "myStory",
      "loc": Object {
        "end": Object {
          "column": 24,
          "line": 1,
        },
        "start": Object {
          "column": 16,
          "line": 1,
        },
      },
      "name": "exportedStory",
    },
  },
}
`;

exports[`extract-exports re-exported-name.js 1`] = `
Object {
  "default": undefined,
  "named": Object {
    "myStory": Object {
      "from": "stories.tsx",
      "internalName": "myStory",
      "loc": Object {
        "end": Object {
          "column": 16,
          "line": 1,
        },
        "start": Object {
          "column": 9,
          "line": 1,
        },
      },
      "name": "myStory",
    },
  },
}
`;
